# patch2prod-arena

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  blog.md  docker-compose.yml  grpo_logs.txt  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt
artifacts/: demo_results.json  metrics_summary.json
artifacts/traces/: baseline_trace.json  improved_trace.json  sft_trace.json
data/: eval_tasks.jsonl  grpo_train_states.jsonl  sft_traces.jsonl  train_tasks.jsonl
demo-ui/: app.js  index.html  styles.css
notebooks/: SFT_Kaggle.ipynb  patch2prod_small_sft.ipynb  sft-kaggle.ipynb
patch2prod/: __init__.py  cli_demo.py  env.py  models.py  server.py  tasks.py
patch2prod_arena.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: dev.sh  hf_grpo_job.sh  http_smoke_test.py  launch_hf_grpo.sh  replay_ci_events.py  run_all.sh
training/: evaluate.py  evaluate_grpo_policy.py  evaluate_sft_policy.py  generate_grpo_data.py  generate_plots.py  requirements-train.txt  train_grpo.py  train_sft.py  train_stub.py
